<resources>
    <string name="app_name">Licenta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="generic_error">An error occured. Please try again.</string>
    <string name="ok_button">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_internet">Please make sure you\'re connected to internet.</string>
    <string name="creeaz_cont_nou">Creează cont nou</string>
    <string name="am_uitat_parola">Am uitat parola</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="centru_medical_de_recuperare">Centru medical\nde recuperare</string>
    <string name="centru_medical_de_recuperare_oneline">Centru medical de recuperare</string>
    <string name="register">Register</string>
    <string name="cnp">CNP</string>
    <string name="parola">Parola</string>
    <string name="telefon">Telefon</string>
    <string name="numele_complet">Numele\ncomplet</string>
    <string name="numele_complet_registration">Numele complet</string>
    <string name="error_name_required">Trebuie introdus un nume.</string>
    <string name="error_phone_required">Trebuie introdus numarul de telefon</string>
    <string name="error_email_required">Trebuie introdus emailul</string>
    <string name="error_password_required">Trebuie introdusa parola!</string>
    <string name="error_CNP_required">Trebuie introdus cnp-ul!</string>
    <string name="error_password_length">Parola trebuie sa aiba minim 6 caractere</string>
    <string name="check_data_validity">Verificati validitatea datelor introduse.</string>
    <string name="bun_venit">Bun Venit!</string>
    <string name="cabinet_medical_vanatori">Cabinet Medical Vânători</string>
    <string name="creaza_cont">Crează cont</string>
    <string name="cnp_placeholder">CNP:192837581923</string>
    <string name="phone_placeholder">01234566789</string>
    <string name="email_placeholder">email@email.com</string>
    <string name="cabinet_medical_de_recuperare">Cabinet medical de recuperare</string>
    <string name="resetare_parola">Resetare parola</string>
    <string name="programari">Programari</string>
    <string name="acasa">Acasa</string>
    <string name="contul_meu">Contul meu</string>
    <string name="delogare">Delogare</string>
    <string name="stergere_cont">Stergere cont</string>
    <string name="test_covid_online">Test covid online</string>
    <string name="acces_rapid">Acces rapid</string>
    <string name="istoric_medical">Istoric medical</string>
    <string name="anuleaza">Anuleaza</string>
    <string name="reprogrameaza">Reprogrameaza</string>
    <string name="appointment_title_as_patient">Aveti o programare la</string>
    <string name="appointment_title_as_doctor">Programarea pacientului</string>
    <string name="alergii">Alergii</string>
    <string name="istoric_de_boli">Istoric de boli</string>
    <string name="istoric_tratamente">Istoric tratamente</string>
    <string name="spinner_dropdown">Spinner dropdown</string>
    <string name="confirma_programare">Confirma programare</string>
    <string name="salveaza_profil">Salveaza profil</string>
    <string name="profil">Profil</string>
    <string name="error_insert_valid_email">Introduceti un email valid.</string>
    <string name="msg_password_reset_info">An password reset email has been sent to your inbox. Please check your email.</string>
    <string name="msg_registration_successful">User registered successfuly. Welcome %s</string>
    <string name="screening_covid_19_online">Screening Covid-19 Online</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="nu">NU</string>
    <string name="da">DA</string>
    <string name="afla_raspunsul">Afla raspunsul</string>
    <string name="please_remain_isolated">Va recomandam sa anulati orice programare momentan, si sa va efectuati un test Covid Rapid/PCR atat pentru sanatatea voastra sau a celor din jur.</string>
    <string name="patient_triage_safe">Din rezultate reiese faptul ca sunt sanse minime de a fi infectat cu  virusul SARS-COV2. Poate fi doar o stare temporara de raceala sau oboseala. Pentru mai multe investigatii si precautii va sfatuim sa vizitati medicul de familie in cazul in care va simtiti foarte rau.</string>
    <string name="error_one_response_mandatory_per_question">Va rugam sa selectati un raspuns pentru fiecare intrebare.</string>
    <string name="sunteti_doctor">Sunteti doctor?</string>
    <string name="id_doctor">ID Doctor</string>
    <string name="error_id_doctor_valid">Trebuie introdus un ID valid.</string>
    <string name="error_no_doctors_available">No doctors available for selected speciality.</string>
    <string name="error_no_intervals_available">No intervals available. Please select another day.</string>
    <string name="info_appointment_successful">Appointment booked successfully.</string>
    <string name="msg_no_appointments">No appointments for today.</string>
    <string name="msg_reschedule_appointment">Appointment has been cancelled successfully. Please notify your patient.</string>
    <string name="info_select_patient">Please select a patient to see his medical record.</string>
    <string name="add_medical_data">Add medical data</string>
    <string name="filtreaza_pacientii_dupa_boala">Filtreaza pacientii dupa boala</string>
    <string name="pacienti">Pacienti</string>
    <string name="info_no_patient_with_symptoms">Niciun pacient nu prezinta aceste simptome.</string>
    <string name="info_back_to_medical_record">Inapoi la istoricul medical</string>
    <string-array name="test_covid_online_questions">
        <item>1.Aveți vreo problemă de sănătate în momentul de față?</item>
        <item>2.Ați avut vreun episod febril , asemănător cu gripa, în ultimele 14 zile?</item>
        <item>3.Ati avut simpome dea pierdere a gustului sau al mirosului în ultimele 14 zile?</item>
        <item>4.Ati avut vreun simptom din lista de mai jos în ultimele 14 zile?\n-dureri în gât\n-dureri de cap\n-dureri de cap și dureri musculare\n-diaree\n-o iritație la nivelul pielii sau o decolorare a degetelor de la mâini sau de la picioare\n-ochi roșii sau iritați</item>
        <item>5.Ati avut vreun simptom din lista de mai jos în ultimele 14 zile? Dacă da, vă recomandăm să luați măsuri și să cotactați un doctor.\n-dificultăți de respirație sau dispnee\n-incapacitatea de a vorbi sau de a se mișca\n-durere toracică</item>
        <item>6.Ați primit raspuns pozitiv la vreun test rapid făcut în ultimele 14 zile?</item>
        <item>7.Aveți probleme cronice de sănătate cum ar fi:\n-boli de inimă\n-boli de plămâni\n-boli de rinichi\n-diabet, anemie, alte boli de sânge\n-orice altă problemă a sistemului imunitar sau boli neurologice?\nDacă da, este recomandat să contactați un medic pentru a vă asigura că nu sunteți infectat și cu SARS-COV-2, pentru a preveni următoarele complicații.</item>
        <item>8.În ultimele 3 luni, ați luat medicamente care vă slăbesc sistemul imunitar, cum ar fi:\n-cortizon\n-prednison sau alți steroizi\n-medicamente anticanceroase sau ați avut tratamente cu radiatii?</item>
        <item>9.În ultimele luni, ați primit transfuzie de sânge sau produse din sânge, vi s-a administrat imunoglobulină sau un medicament antiviral?</item>
        <item>10.Ați mai făcut vreun vaccin în ultimele 4 săptămâni? Starea de oboseală poate fi doar o alertă temporară.</item>
        <item>11.Ați mai fost infectat cu virusul SARS-CoV-2 înainte?</item>
        <item>12.Ați avut contact cu vreo persoană infectata cu SARS-CoV-2 în ultimele 14 zile?</item>
    </string-array>
    <string-array name="doctor_specialities">
        <item>Fizioterapie</item>
        <item>Fiziokinetoterapie</item>
        <item>Electroterapie</item>
        <item>Hidroterapie</item>
        <item>Termoterapie</item>
        <item>Masaj terapeutic</item>
        <item>Ergoterapia</item>
        <item>Pneumatoterapia</item>
        <item>Radiografie</item>
        <item>Tomografie</item>
        <item>Analize</item>
        <item>Intretinere corporala</item>
    </string-array>
    <string-array name="array_alergies">
        <item>Amoxicilina</item>
        <item>Ampicilina</item>
        <item>Penicilina G</item>
        <item>Penicilina V</item>
        <item>Polen</item>
        <item>Aspirina</item>
        <item>Ibuprofen</item>
        <item>Diverse metale</item>
        <item>Pacientul nu suferă de nicio alergie</item>
    </string-array>
    <string-array name="array_diseases">
        <item>Artrita</item>
        <item>Artroza</item>
        <item>Discopatia</item>
        <item>Accident vascular cerebral</item>
        <item>Traumatism/leziune musculară</item>
        <item>Scolioză</item>
        <item>Hernie de disc</item>
        <item>Durerile/spasmele musculare</item>
        <item>Osteoporoza</item>
        <item>Analize</item>
        <item>Poliartrită reumatoidă</item>
        <item>Dureri musculare</item>
        <item>Dureri de gât</item>
        <item>Tonus muscular slab</item>
        <item>Umăr înțepenit</item>
        <item>Întindere musculară</item>
        <item>Operație tendon</item>
        <item>Operație genunchi</item>
        <item>Postură neadecvată</item>
    </string-array>
    <string-array name="pacient_diagnostic">
        <item>Durerile musculare</item>
        <item>Artrita</item>
        <item>Artroza</item>
        <item>Discopatia</item>
        <item>Accident vascular cerebral</item>
        <item>Traumatism/leziune musculară</item>
        <item>Scolioză</item>
        <item>Hernie de disc</item>
        <item>Durerile/spasmele musculare</item>
        <item>Osteoporoza</item>
        <item>Analize</item>
        <item>Poliartrită reumatoidă</item>
        <item>Dureri musculare</item>
        <item>Dureri de gât</item>
        <item>Tonus muscular slab</item>
        <item>Umăr înțepenit</item>
        <item>Întindere musculară</item>
        <item>Operație tendon</item>
        <item>Operație genunchi</item>
        <item>Postură neadecvată</item>
        <item>Afectiuni reumatice</item>
        <item>Afectiuni cardiovasculare</item>
        <item>Afectiuni respiratorii</item>
    </string-array>
    <string-array name="array_treatments">
        <item>Terapia laser</item>
        <item>Magnetoterapie</item>
        <item>Shockwave</item>
        <item>Ultrasunete</item>
        <item>Electroterapie</item>
        <item>Masaj terapeutic</item>
        <item>Parafina</item>
        <item>Unde scurte</item>
        <item>Bai galvanice</item>
        <item>Kinetoterapie </item>
        <item>Drenaj limfatic</item>
        <item>Dus subacval </item>
        <item>Osteopatie</item>
        <item>Masaj Shiatsu</item>
        <item>Terapia Vojta</item>
        <item>Tehnica Fascia</item>
        <item>Exercitii pentru mobilitate</item>
        <item>Fizioterapia</item>
        <item>Tehnica Tecar</item>
        <item>Terapia prin elongatie vertebrala </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_user_update">User data has been updated successfully.</string>
    <string name="bar_chart_title_fragment">Bar chart \nDistributia Bolilor</string>
</resources>