<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterUserActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlTopScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScreenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/centru_medical_de_recuperare"
        android:textAlignment="center"
        android:textColor="@color/red_dark1"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gdlTopScreen" />

    <CheckedTextView
        android:id="@+id/cbIsDoctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checkMarkTint="@color/red_dark1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dimen_5dp"
        android:text="@string/sunteti_doctor"
        android:textColor="@color/red_dark1"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreenTitle"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNume"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:autofillHints="name"
        android:hint="@string/numele_complet_registration"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbIsDoctor"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTelefon"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:autofillHints="phone"
        android:hint="@string/telefon"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNume"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTelefon"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etParola"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:autofillHints="password"
        android:hint="@string/parola"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCNP"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/cnp"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etParola"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etIdDoctor"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/id_doctor"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etParola"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spSpeciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@null"
        android:overlapAnchor="false"
        android:popupBackground="@drawable/card_medical_appointment"
        app:layout_constraintTop_toBottomOf="@id/etIdDoctor"
        tools:listitem="@layout/layout_spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <include
        android:id="@+id/layoutProgress"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>