<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cabinet_medical_vanatori"
        android:textAlignment="center"
        android:textColor="@color/red_dark1"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bun_venit"
        android:textAlignment="center"
        android:textColor="@color/red_dark1"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/etCNP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCNP"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/cnp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:nextFocusDown="@id/etParola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etParola"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/parola"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusDown="@id/etTelefon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCNP"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTelefon"
        style="@style/CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/telefon"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:nextFocusDown="@id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etParola"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:text="@string/creaza_cont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <include
        android:id="@+id/layoutProgress"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>