<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuestion"
        style="@style/CustomTextView.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/radioGroup"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:text="@string/lorem_ipsum" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvQuestion"
        app:layout_constraintTop_toTopOf="@id/tvQuestion">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_dark1"
            android:text="@string/da"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_dark1"
            android:text="@string/nu"
            android:textColor="@color/black" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>